--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -7,6 +7,7 @@
   <nav>
     <ul>
       <li><a href="/artists">All Artists</a></li>
+      <li><a href="/albums">All Albums</a></li>
     </ul>
   </nav>
   <%= yield  %>
