reorganised seeds.rb

--- a/rhys_records_app/views/albums_view/index.erb
+++ b/rhys_records_app/views/albums_view/index.erb
@@ -11,7 +11,7 @@
   </tr>
   <% for album in @albums %>
   <tr>
-    <td><%= album.name %></td>
+    <td><%= album.title %></td>
     <td>|</td>
   </tr>
   <% end %>
