added a link on homepage to layout

--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -6,8 +6,10 @@
 <body>
   <nav>
     <ul>
+      <li><a href="/">Home or Index</a></li>
       <li><a href="/artists">All Artists</a></li>
       <li><a href="/albums">All Albums</a></li>
+      <li><a href="/genres">All Albums</a></li>
     </ul>
   </nav>
   <%= yield  %>
