--- a/rhys_records_app/views/genre_view/genres_index.erb
+++ b/rhys_records_app/views/genre_view/genres_index.erb
@@ -6,13 +6,13 @@
 
 <table>
   <tr>
-    <th>title</th>
+    <th>Type</th>
     <th></th>
   </tr>
-  <% for album in @albums %>
+  <% for genre in @genres %>
   <tr>
-    <td><%= album.title %></td>
-    <td>|</td>
+    <td><%= genre.type %></td>
+    <td></td>
   </tr>
   <% end %>
 </table>
