updated the genres_index erb file with correct ruby code

--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -9,7 +9,7 @@
       <li><a href="/">Home or Index</a></li>
       <li><a href="/artists">All Artists</a></li>
       <li><a href="/albums">All Albums</a></li>
-      <li><a href="/genres">All Albums</a></li>
+      <li><a href="/genres">All Genres</a></li>
     </ul>
   </nav>
   <%= yield  %>
