added and tested a successful genre method and path to albums_index

--- a/rhys_records_app/views/albums_view/albums_index.erb
+++ b/rhys_records_app/views/albums_view/albums_index.erb
@@ -18,7 +18,7 @@
     <td><%= album.cost_price %></td>
     <td><%= album.quantity %></td>  
     <td><%= album.artist.name %></td>  
-    <td><%= @genre.type %></td>  
+    <td><%= album.genre.type %></td>  
   </tr>
   <% end %>
 </table>
