added a new artist form

--- a/rhys_records_app/views/artists/index.erb
+++ b/rhys_records_app/views/artists/index.erb
@@ -1,9 +1,7 @@
-<h>Rhys' Records</h>
-
 <p>artist view index</p>
 
 <h1>Artists</h1>
-
+<a href="/artists/new">New Artist</a>
 <table>
   <tr>
     <th>Name</th>
