--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -2,16 +2,19 @@
 <html>
 <head>
   <title>Rhys' Records</title>
+
 </head>
 <body>
   <nav>
     <ul>
-      <li><a href="/">Home or Index</a></li>
-      <li><a href="/artists">All Artists</a></li>
-      <li><a href="/albums">All Albums</a></li>
-      <li><a href="/genres">All Genres</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/artists">All Artists</a></li>
+    <li><a href="/albums">All Albums</a></li> 
+    <li><a href="/genres">All Genres</a></li>
     </ul>
   </nav>
-  <%= yield  %>
+  <h>Rhys' Records</h>
+  <br>
+  <%= yield %>
 </body>
 </html>
