added a delete artist route

--- a/rhys_records_app/views/artists/show.erb
+++ b/rhys_records_app/views/artists/show.erb
@@ -5,4 +5,14 @@
 <p>quantity <%= album.quantity  %></p>
 <p>cost_price <%= album.cost_price  %></p>
 
+<form method="get" action="/artists/<%= @artist.id %>/edit"> 
+  <input type="submit" value="Edit Artist"/>
+</form>
+
+<br>
+
+<form method="post" action="/artists/<%=@artist.id%>/delete"> 
+  <input type="submit" value="Delete"/>
+</form>
+
 <% end %>
