added a new genre path

--- a/rhys_records_app/views/artists/edit.erb
+++ b/rhys_records_app/views/artists/edit.erb
@@ -1,6 +1,5 @@
 <form method="post" action="/artists/<%=@artist.id%>">
-  
   <label for="Name">Name:</label>
   <input id="name" type="text" name="name" value="<%= @artist.name %>" />
-
+  <input type='submit' value='edit' />
 </form>
