--- a/rhys_records_app/views/artists/show.erb
+++ b/rhys_records_app/views/artists/show.erb
@@ -6,7 +6,7 @@
 <p>cost_price <%= album.cost_price  %></p>
 
 <form method="get" action="/artists/<%= @artist.id %>/edit"> 
-  <input type="submit" value="Edit Artist"/>
+  <input type="submit" value="Update Artist"/>
 </form>
 
 <br>
