added a artists in genre

--- a/rhys_records_app/views/genres/show.erb
+++ b/rhys_records_app/views/genres/show.erb
@@ -1,1 +1,11 @@
-Yo
+<p>Type <%= @genre.type %></p>
+
+<% for artist in @genre.artists %>
+<p>name <%= artist.name %>
+<% end %>
+
+<br>
+<br>
+<br>
+
+Add function here to show all albums in the genre type
