added a linnk in the index page to show genre qualities

--- a/rhys_records_app/views/genres/index.erb
+++ b/rhys_records_app/views/genres/index.erb
@@ -11,9 +11,12 @@
   <tr>
     <td><%= genre.type %></td>
     <td></td>
+    <td><a href='/genres/<%= genre.id%>'>Show Genre qualities</a></td>
   </tr>
   <% end %>
 </table>
+
+
 
 <p>
   <a href="/genres/new">New Genre</a>
