added get function to album controller

--- a/rhys_records_app/views/genres/index.erb
+++ b/rhys_records_app/views/genres/index.erb
@@ -1,7 +1,7 @@
-<p>genre view index</p>
+<p>genre index</p>
 
 <h1>Genres</h1>
-<a href="/genres/new">New Artist</a>
+
 <table>
   <tr>
     <th>Type</th>
