added extra album details to show page

--- a/rhys_records_app/views/albums/show.erb
+++ b/rhys_records_app/views/albums/show.erb
@@ -1,4 +1,5 @@
 <p>Title <%= @album.title  %></p>
 <p>Quantity <%= @album.quantity  %></p>
 <p>Price <%= @album.cost_price  %></p>
-
+<p>Artist <%= @album.artist.name  %></p>
+<p>Genre <%= @album.genre.type  %></p>
