--- a/rhys_records_app/views/albums/edit.erb
+++ b/rhys_records_app/views/albums/edit.erb
@@ -1,1 +1,27 @@
-Yo
+<form method='post' action='/albums/<%= @album.id %>'>
+
+  <label for='Title'>Title:</label>
+  <input id='title' type='text' name='title' value= '<%= @album.title %>' />
+  
+  <label for='Quantity'>Quantity:</label>
+  <input id='quantity' type='text' name='quantity' value= '<%= @album.quantity %>' />
+  
+  <label for='Cost'>Cost:</label>
+  <input id='cost_price' type='text' name='cost_price' value= '<%= @album.cost_price %>' />
+
+ <label for='artist-name'>Artist:</label>
+  <select name='artist_id'>
+    <% @artists.each do |artist| %>
+      <option value=<%= artist.id %>><%= artist.name %></option>
+    <% end %>
+  </select>
+
+ <label for='genre-type'>Genre:</label>
+ <select name='genre_id'>
+   <% @genres.each do |genre| %>
+     <option value=<%= genre.id %>><%= genre.type %></option>
+   <% end %>
+ </select>
+
+  <input type='submit' value='edit' />
+</form>
