added the delete method for album class and ran it on the controller page

--- a/rhys_records_app/views/albums/show.erb
+++ b/rhys_records_app/views/albums/show.erb
@@ -3,3 +3,7 @@
 <p>Price <%= @album.cost_price  %></p>
 <p>Artist <%= @album.artist.name  %></p>
 <p>Genre <%= @album.genre.type  %></p>
+
+<form method="post" action="/albums/<%=@album.id%>/delete"> 
+  <input type="submit" value="Delete"/>
+</form>
