--- a/rhys_records_app/views/artists/index.erb
+++ b/rhys_records_app/views/artists/index.erb
@@ -16,7 +16,7 @@
     <td>|</td>
     <td><a href='/artists/<%= artist.id%>'>Show Artist</a></td>
     <td>|</td>
-    <td><a href='/artists/<%= artist.id %>/edit'>EDIT</a></td>
+    <td><a href='/artists/<%= artist.id %>/edit'>Edit</a></td>
   </tr>  
   <% end %>
 </table>
