--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -2,9 +2,14 @@
 <html>
 <head>
   <title>Rhys' Records</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="icon" href="/images/insert.jpg"/>
+
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 
 </head>
 <body>
+<main class="flex flex--row">
   <nav>
     <ul>
     <li><a href="/">Home</a></li>
