added a load of css

--- a/rhys_records_app/views/albums/new.erb
+++ b/rhys_records_app/views/albums/new.erb
@@ -1,13 +1,13 @@
 <form action='/albums' method='post'>
 
   <p>Album Title</p>
-  <input type='text' name='title'/>
+  <input type='text' name='title' required/>
 
   <p>Quantity</p>
-  <input type='text' name='quantity'>
+  <input type='text' name='quantity' required/>
 
   <p>Cost Price</p>
-  <input type='text' name='cost_price'>
+  <input type='text' name='cost_price' required/>
 
   <p>
     <p>Artist</p>
