--- a/rhys_records_app/views/artists/new.erb
+++ b/rhys_records_app/views/artists/new.erb
@@ -1,5 +1,5 @@
 <form action="/artists" method="post">
 <p>Artist Name</p>
-  <input type="text" name="name">
+  <input type="text" name="name" required>
   <input type='submit' value="Create Artist">
 </form>
