--- a/rhys_records_app/views/genres/new.erb
+++ b/rhys_records_app/views/genres/new.erb
@@ -1,5 +1,5 @@
 <form action='/genres' method='post'>
   <p>Genre Type</p>
-    <input type='text' name='type'/>
+    <input type='text' name='type' required/>
     <input type='submit' value='New Genre'/>
 </form>
