--- a/rhys_records_app/public/styles/style.css
+++ b/rhys_records_app/public/styles/style.css
@@ -3,3 +3,66 @@ body {
   font-family: 'Open Sans', sans-serif;
 
 }
+
+h1, h2, h3, h4, h5, h6 {
+ 
+  margin: 0px;
+  padding: 0px;
+}
+
+h1 {
+  font-size: 1.8em;
+  color: black;
+  margin-bottom: 20px;
+}
+
+a, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+nav {
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+  padding-right: 0px;
+}
+
+nav ul li {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+ul {
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+}
+
+main {
+  padding: 25px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex--row {
+  flex-direction: row;
+}
+
+#content {
+  border-left: 1px solid darkred;
+  padding-left: 25px;
+}
+
+header {
+  display: block;
+}
+
+header li {
+  border: solid 1px;
+  padding: 15px;
+  display: inline;
+  list-style-type: none;
+}
