--- a/rhys_records_app/public/styles/style.css
+++ b/rhys_records_app/public/styles/style.css
@@ -1,14 +1,61 @@
-body {
-  background-color: #E5FFF4;
-  font-family: 'Open Sans', sans-serif;
+html {
+  text-align: center;
+  color: black;
+}
 
+table {
+  margin: 0 auto;
+  text-align: center;
+
+}
+body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: #E5FFF4;
 }
 
 h1, h2, h3, h4, h5, h6 {
- 
+ font-family: 'Titillium Web', sans-serif;
   margin: 0px;
   padding: 0px;
 }
+
+p {
+  font-family: 'Lato', sans-serif;
+}
+
+tr:hover {
+  color: grey;
+}
+
+.background-image {
+ 
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  /*opacity: 0.1;*/
+  
+  background-image: url('/images/record_store_home.jpg');
+  z-index: -1;
+  /*position: absolute;*/
+}
+/* GENRE INDEX */
+
+#genre-index {
+z-index: 1;
+/*position: relative;*/
+  width: 100%;
+  margin: 0 auto;
+  padding: 12em 0;
+  background: rgba(232, 255, 245, 0.8);
+}
+
+/* GENRE SHOW */
+
+/*#genre-show {
+  opacity: 1;
+}*/
+
+-------
 
 h1 {
   font-size: 1.8em;
@@ -28,6 +75,8 @@ nav {
   padding-right: 0px;
 }
 
+
+
 nav ul li {
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -41,6 +90,11 @@ ul {
 
 main {
   padding: 25px;
+}
+
+form {
+  color: red;
+
 }
 
 .flex {
