--- a/rhys_records_app/views/genres/show.erb
+++ b/rhys_records_app/views/genres/show.erb
@@ -1,3 +1,5 @@
+<section id='genre-show'>
+
 <p>Type <%= @genre.type %></p>
 
 <% for artist in @genre.artists %>
@@ -7,5 +9,5 @@
 <br>
 <br>
 <br>
-
+</section>
 Add function here to show all albums in the genre type
