--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -3,13 +3,17 @@
 <head>
   <title>Rhys' Records</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="icon" href="/images/insert.jpg"/>
+  <link href="https://fonts.googleapis.com/css?family=Lato|Titillium+Web" rel="stylesheet">
+  
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
+
+  <link rel="icon" href="/images/insert.jpg"/>
 </head>
 <body>
 <header>
 <main class="flex flex--row">
-  <nav>
+
+  <nav id='menu'>
     <ul>
     <a href="/"><li>Home</li></a>
     <a href="/artists"><li>Artists</li></a>
@@ -18,8 +22,19 @@
     </ul>
   </nav>
 </header>
-  <h1>Rhys' Records</h1>
-  <br>
-  <%= yield %>
+</main>
+<div class="background-image">
+<section id='genre-index'>
+  <div>
+    <h1>Rhys' Records</h1>
+  </div>
+ <div>
+   <%= yield %>
+   
+
+ </div>
+  <footer>
+    
+  </footer>
 </body>
 </html>
