changed the insert picture

--- a/rhys_records_app/views/layout.erb
+++ b/rhys_records_app/views/layout.erb
@@ -7,7 +7,7 @@
   
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
 
-  <link rel="icon" href="/images/insert.jpg"/>
+  <link rel="icon" href="/images/insert_thing.jpeg"/>
 </head>
 <body>
 <header>
