added text to home page

--- a/rhys_records_app/views/home.erb
+++ b/rhys_records_app/views/home.erb
@@ -1,2 +1,7 @@
-
-
+<div>
+Rhys' Records was founded in 1894 by Rhys at its original location was in the Queen’s Arcade, Cardiff, where the shop specialised in the sale of phonographs, wax phonograph cylinders and shellac phonograph discs. In the early 1920s, Henry’s son Edward took over the running of the business and, with the aid of the popular accordionist and band leader, Joe Gregory, sold musical instruments alongside the pre-recorded music. In the late 1940s, Henry moved the shop down the road to a larger premises on The Hayes, where it happily thrived until June 2010.
+  <br><br>
+  Following a major redevelopment of The Hayes (and the inevitable increases in rental prices) Rhys' Records was relocated to 31, The Morgan Arcade and remained there for four and a half years.  In January 2015 it relocated to a more suitable and permanent space just around the corner at 27, The Morgan Arcade.  
+  <br><br>
+  Over the years Rhys' Records has seen and supplied many varied types of pre-recorded music. Today we pride ourselves on our diverse selection of music on both compact dics and good old vinyl at very competitive prices. This site is always growing so let us know if you can’t see what you’d like on here, and we’ll add it or get one for you.
+</div>
