--- a/rhys_records_app/views/albums/show.erb
+++ b/rhys_records_app/views/albums/show.erb
@@ -1,8 +1,11 @@
+
 <p>Title <%= @album.title  %></p>
 <p>Quantity <%= @album.quantity  %></p>
 <p>Price <%= @album.cost_price  %></p>
 <p>Artist <%= @album.artist.name  %></p>
 <p>Genre <%= @album.genre.type  %></p>
+
+<p><a href='/albums/<%= @album.id %>/edit'>Edit</a></p>
 
 <form method="post" action="/albums/<%=@album.id%>/delete"> 
   <input type="submit" value="Delete"/>
