--- a/rhys_records_app/views/artists/index.erb
+++ b/rhys_records_app/views/artists/index.erb
@@ -1,24 +1,13 @@
 <h1>Artists</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-    <th>|</th>
-    <th>Show</th>
-    <th>|</th>
-    <th>Edit</th>
-  </tr>
   <% for artist in @artists %>
   <tr>
-    <td><%= artist.name %></td>
-    <td>|</td>
-    <td><a href='/artists/<%= artist.id%>'>Show Artist</a></td>
-    <td>|</td>
-    <td><a href='/artists/<%= artist.id %>/edit'>Edit</a></td>
+    <td><a href='/artists/<%= artist.id%>'><%= artist.name %></a></td>   
   </tr>  
   <% end %>
 </table>
-
+<br>
 <p>
-<a href="/artists/new">New Artist</a>
+  <a href="/artists/new">New Artist</a>
 </p>
