--- a/rhys_records_app/views/artists/show.erb
+++ b/rhys_records_app/views/artists/show.erb
@@ -1,9 +1,22 @@
-<p>Name <%= @artist.name %></p>
+<h3><%= @artist.name %></h3>
 
 <% for album in @artist.albums %>
-<p>title <%= album.title  %></p>
-<p>quantity <%= album.quantity  %></p>
-<p>cost_price <%= album.cost_price  %></p>
+
+<table>
+  <tr>
+    <th><%= album.title  %></td>
+  </tr>
+  <tr>
+    <th>quantity <%= album.quantity  %></td>
+  </tr>
+  <tr>  
+    <th>cost_price £<%= album.cost_price  %></td>
+  </tr>
+</table>
+
+<% end %>
+
+<br>
 
 <form method="get" action="/artists/<%= @artist.id %>/edit"> 
   <input type="submit" value="Update Artist"/>
@@ -14,5 +27,3 @@
 <form method="post" action="/artists/<%=@artist.id%>/delete"> 
   <input type="submit" value="Delete"/>
 </form>
-
-<% end %>
