--- a/rhys_records_app/views/genres/index.erb
+++ b/rhys_records_app/views/genres/index.erb
@@ -1,22 +1,14 @@
-
-
 <h1>Genres</h1>
 
-<table>
-  <tr>
-    <th>Type</th>
-    <th></th>
-  </tr>
+<table>  
   <% for genre in @genres %>
   <tr>
-    <td><%= genre.type %></td>
+    <td><a href='/genres/<%= genre.id%>'><%= genre.type %></a></td>
     <td></td>
-    <td><a href='/genres/<%= genre.id%>'>Show Genre qualities</a></td>
+    <td></td>
   </tr>
   <% end %>
 </table>
-
-
 
 <p>
   <a href="/genres/new">New Genre</a>
